# xknxproject

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements_production.txt  requirements_testing.txt  setup.cfg  setup.py  test_parser_syntax.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: ci.yml  pre-commit-update.yml  release-drafter.yml
ets/: __init__.py  ets.py
ets-project/: __version__.py  ets.py
script/: refresh_stubs.py
test/: __init__.py  conftest.py  test_device_parser_parameterization.py  test_knxproj.py  test_parameterization.py  test_util.py
test/resources/: ets6_free.knxproj  ets6_two_level.knxproj  module-definition-test.knxproj  smart_linking.knxproj  test_project-ets4-no_password.knxproj  test_project-ets4.knxproj  testprojekt-ets6-functions.knxproj  xknx_test_project.knxproj  xknx_test_project_no_password.knxproj
test/resources/device_files/: README.md
test/resources/stubs/: ets6_free.json  ets6_two_level.json  module-definition-test.json  smart_linking.json  test_project-ets4.json  testprojekt-ets6-functions.json  xknx_test_project.json
test/xml/: __init__.py  test_device_parser.py  test_parser.py
test/zip/: __init__.py  test_extractor.py
test/zip/resources/: testprojekt-ets6.knxproj  xknx_test_project.knxproj
xknxproject/: __init__.py  __version__.py  const.py  knxproj.py  util.py  xknxproj.py
xknxproject/combination/: __init__.py  combination.py
xknxproject/exceptions/: __init__.py  exceptions.py
xknxproject/loader/: __init__.py  application_program_loader.py  group_address_loader.py  hardware_loader.py  knx_master_loader.py  loader.py  location_loader.py  manufacturer_loader.py  project_loader.py  topology_loader.py
xknxproject/models/: __init__.py  knxproject.py  models.py  static.py
xknxproject/xml/: __init__.py  models.py  parser.py  sax_content_handler_0.py  simple_device_parser.py  util.py
xknxproject/zip/: __init__.py  extractor.py
